force-app/main/default/objects/NICC_Artifact__c/NICC_Artifact__c.object-meta.xml
<CustomObject>
    <description>Used for Artifacts for Hosted RFC Change Requests</description>
    <label>Artifact</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>NICC Artifact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Artifacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>