force-app/main/default/objects/NICC_Artifact__c/fields/Artifact_Name__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Name__c</fullName>
    <description>Descriptive Name of the Artifact</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Descriptive Name of the Artifact</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>