force-app/main/default/objects/NICC_Artifact__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cloned From</label>
    <length>18</length>
    <type>Text</type>
</CustomField>