force-app/main/default/objects/NICC_Artifact__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether an Artifact has one of the required items: Description, Document Link or Attachment.</description>
    <inlineHelpText>Denotes whether an Artifact has one of the required items: Description, Document Link or Attachment.</inlineHelpText>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>