force-app/main/default/objects/NICC_Artifact__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>