force-app/main/default/objects/NICC_Artifact__c/fields/NI_Change_Control__c.field-meta.xml
<CustomField>
    <fullName>NI_Change_Control__c</fullName>
    <label>NI Change Control</label>
    <referenceTo>NI_Change_Control__c</referenceTo>
    <relationshipLabel>Artifacts</relationshipLabel>
    <relationshipName>NICC_Artifacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>