force-app/main/default/objects/NICC_Artifact__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Communication Plan</fullName>
            </value>
            <value>
                <fullName>Customer Sign-off</fullName>
            </value>
            <value>
                <fullName>Deployment Plan</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Monitoring Plan</fullName>
            </value>
            <value>
                <fullName>Rollback Plan</fullName>
            </value>
            <value>
                <fullName>Test Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>